# smf-to-ym2151log-rust

./: .gitignore  Cargo.toml  DEMO_README.md  DEMO_SEPARATION.md  IMPLEMENTATION.md  MML_INTEGRATION.md  README.ja.md  README.md  WASM_USAGE.md  WAVEFORM_RENDERING.md  _config.yml  demo.html  index-mml-monolith.html  index-simple.html  index.html  package-lock.json  package.json  setup-libs.js  verify-demos.js  vite.config.ts
.github/: copilot-instructions.md
.github/scripts/: create_ci_issue.py
.github/workflows/: ci.yml  deploy-demo.yml  deploy-pages.yml  deploy-wasm.yml
demo-library/: .gitignore  README.md  biome.json  delay-vibrato-demo.ts  delay-vibrato.html  envelope-generator.ts  globals.d.ts  index.html  library-demo.ts  log-visualizer-lfo.ts  log-visualizer-note-segments.ts  log-visualizer-pitch-canvas.ts  log-visualizer.ts  mml-support.ts  package-lock.json  package.json  pop-noise-demo.ts  pop-noise-detector.ts  pop-noise.html  portamento-soft-lfo-demo.ts  portamento-soft-lfo.html  shared-demo.ts  style.css  tone-interpolation-demo.ts  tone-interpolation.html  tone-json-attachment.ts  tone-json-demo.ts  tone-json-mml.ts  tone-json.html  tsconfig.json  vite.config.ts  wav-exporter.ts  waveform-canvas.ts  waveform-simulator.ts  waveform-viewer.ts  ym2151-utils.ts
demo-mml/: .gitignore  README.md  index.html  mml-demo.ts  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
generated-docs/: development-status-generated-prompt.md  development-status.md  project-overview-generated-prompt.md  project-overview.md
issue-notes/: 100.md  102.md  104.md  105.md  108.md  110.md  111.md  112.md  114.md  115.md  117.md  118.md  122.md  123.md  125.md  126.md  128.md  131.md  133.md  145.md  151.md  153.md  157.md  159.md  162.md  164.md  166.md  167.md  169.md  171.md  172.md  177.md  178.md  180.md  181.md  183.md  184.md  185.md  186.md  187.md  (+55 more)
scripts/: fetch-pkg.mjs
src/: error.rs  lib.rs  main.rs  main.ts  mml.rs  style.css  ui-utils.ts  wasm.rs  ym2151-audio-utils.ts
src/midi/: events.rs  mod.rs  parser.rs  utils.rs  utils_tests.rs
src/ym2151/: channel_allocation.rs  converter.rs  converter_tests.rs  event_processor.rs  event_processor_tests.rs  events.rs  init.rs  mod.rs  note_table.rs  tempo_map.rs  tone.rs
src/ym2151/converter/: event_accumulator.rs  pitch_effects.rs  register_effects.rs  register_fields.rs  waveform.rs
src/ym2151/converter_tests/: attachments.rs  attachments_change_to_next_tone.rs  attachments_program_effects.rs  basic.rs  channels.rs  drums.rs  (+4 more)
tests/: create_test_midi.py  integration_conversion.rs  integration_midi.rs  integration_multichannel.rs  integration_program_change.rs  integration_tests.rs  integration_wasm.rs  test_lfo_output.rs  test_lfo_resolution.rs
tests/test_data/: multi_channel.mid  multi_track.mid  program_change.mid  simple_melody.mid  tempo_change.mid
tones/: 000.json  README.md
