[package]
name = "smf-to-ym2151log-rust"
version = "0.1.0"
edition = "2021"
authors = ["cat2151"]
license = "MIT"
description = "Convert Standard MIDI Files to YM2151 register write log in JSON format"
repository = "https://github.com/cat2151/smf-to-ym2151log-rust"
readme = "README.md"
keywords = ["midi", "ym2151", "fm-synthesis", "audio", "converter"]
categories = ["multimedia", "command-line-utilities"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
midly = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]

[[bin]]
name = "smf-to-ym2151log-rust"
path = "src/main.rs"

[lib]
name = "smf_to_ym2151log"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen"]
